v1.1.1 (Exploration Patch) Added MetalDetector.java Formatted and all code/classes.
Signed-off-by: BuildTools <unconfigured@null.spigotmc.org>